<resources>
    <string name="app_name">menü</string>
    <string name="email_error">E-mail wrong format</string>
    <string name="title_activity_qrreader">QRreader</string>
    <string name="username_short">Username too short</string>
    <string name="username_long">Username too long</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="email_format">E-mail wrong format</string>
    <string name="password_short">Password too short</string>
    <string name="password_long">Password too long</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="app_name_toolbar">Shopping Cart</string>
    <string name="action_bill">Bill</string>
    <string name="action_cart">Cart</string>
    <string name="remove">Remove</string>

    <string name="action_settings">Settings</string>
    <string name="place_order">Place Order</string>
    <string name="qr_reader">QR Code Reader</string>
    <string name="add_product">Add Product</string>
    <string name="upload_image">Upload Image</string>
    <string name="no_file_selected">No file selected</string>
    <string name="item_name">Item Name</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload">Upload</string>
    <string name="title_activity_payment_confirmation_main">PaymentConfirmationMain</string>

    <string name="network_error">Network Unavailable</string>
    <string name="paymentlogin_activity_name">OCBC Login</string>
    <string name="tasks">Tasks</string>
    <string name="qr_code">QR Code</string>
</resources>
