<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewUpload"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:visibility="gone"
        app:srcCompat="@drawable/burger" />

    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/item_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonChooseImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/choose_image" />

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload" />

</LinearLayout>